# nutrimatic

./: .gitignore  AGENTS.md  README.md  conanfile.py  mise.toml
build_index/: build_wikipedia_index.py  convert_zh_text.py  pyproject.toml
build_index/tests/: test_build_wikipedia_index.py  test_cgi_utf8.py  test_convert_zh_text.py
cgi_scripts/: cgi-search.py  cgi_utf8.py
docs/superpowers/plans/: 2026-06-18-agents-build-instructions.md
docs/superpowers/specs/: 2026-06-18-agents-build-instructions-design.md  2026-06-18-index-merge-progress-design.md
source/: cli-utf8.cpp  cli-utf8.h  dump-index.cpp  explore-index.cpp  expr-anagram.cpp  expr-filter.cpp  expr-parse.cpp  expr.h  find-anagrams.cpp  find-expr.cpp  find-phone-words.cpp  index-builder.cpp  index-builder.h  index-format.cpp  index-format.h  index-reader.cpp  index-walker.cpp  index-writer.cpp  index.h  make-index.cpp  merge-indexes.cpp  meson.build  rank-lines-lib.cpp  rank-lines-lib.h  rank-lines.cpp  search-driver.cpp  search-printer.cpp  search.h  test-expr.cpp  test-find-expr.cpp  test-index-builder.cpp  test-index-format.cpp  test-rank-lines.cpp  test-unicode.cpp  unicode.cpp  unicode.h
source/test-data/: mixed-corpus.txt
web_static/: usage.html
